# discord_bot

./: Cargo.toml  README.md
src/: commands.rs  main.rs
src/commands/: activite.rs  decret.rs  goulag.rs  hymn.rs  liberation.rs
